--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ paginate_path: /page-:num
 
 #disqus-id: your-disqus-id
 
-source: .
-destination: ./_site
+#source: .
+#destination: ./_site
 
 sass:
     style: :compressed
