--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 name: "Jekyll true minimal theme"
 description: "Lightweight theme"
 
-url: '' 
-baseurl: '/the-blog'
+url: 'https://bachmeil.github.io/the-blog/' 
+baseurl: ''
 
 markdown: kramdown
 markdown_ext: "markdown,mkdown,mkdn,mkd,md"
