--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: "Jekyll true minimal theme"
 description: "Lightweight theme"
 
-url: 'https://bachmeil.github.io/the-blog/' 
+url: 'https://bachmeil.github.io/the-blog' 
 baseurl: ''
 
 markdown: kramdown
