--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: "Jekyll true minimal theme"
-description: "Lightweight theme"
+name: "Blog"
+description: ""
 
 url: 'https://bachmeil.github.io/the-blog' 
 baseurl: ''
